# hs

./: Makefile  Makefile.in  VERSION  config.h.in  config.status  configure  configure.in  hail.h  hailscan.c
